libs/preprocessor/tests/errors/pe28_unexpected_else/stderr.ansi
[0m[1m[38;5;9merror[PE28][0m[1m: #else when not in a #if directive[0m
  [0m[36m┌─[0m source.hpp:3:2
  [0m[36m│[0m
[0m[36m3[0m [0m[36m│[0m #[0m[31melse[0m
  [0m[36m│[0m  [0m[31m^^^^[0m [0m[31m#else when not in a #if directive[0m

